crates/skyla-invoicing/tests/snapshots/einvoice__credit_note_ubl.snap
---
source: crates/skyla-invoicing/tests/einvoice.rs
expression: ubl
---
<?xml version="1.0" encoding="UTF-8"?>
<CreditNote xmlns="urn:oasis:names:specification:ubl:schema:xsd:CreditNote-2" xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2" xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2">
  <cbc:CustomizationID>urn:cen.eu:en16931:2017#compliant#urn:fdc:peppol.eu:2017:poacc:billing:3.0</cbc:CustomizationID>
  <cbc:ProfileID>urn:fdc:peppol.eu:2017:poacc:billing:01:1.0</cbc:ProfileID>
  <cbc:ID>OD260001</cbc:ID>
  <cbc:IssueDate>2026-09-20</cbc:IssueDate>
  <cbc:TaxPointDate>2026-09-20</cbc:TaxPointDate>
  <cbc:CreditNoteTypeCode>381</cbc:CreditNoteTypeCode>
  <cbc:Note>Workshop zrušen</cbc:Note>
  <cbc:DocumentCurrencyCode>CZK</cbc:DocumentCurrencyCode>
  <cbc:BuyerReference>OD260001</cbc:BuyerReference>
  <cac:BillingReference>
    <cac:InvoiceDocumentReference>
      <cbc:ID>2026-001</cbc:ID>
      <cbc:IssueDate>2026-09-10</cbc:IssueDate>
    </cac:InvoiceDocumentReference>
  </cac:BillingReference>
  <cac:AccountingSupplierParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9929">CZ92588034</cbc:EndpointID>
      <cac:PartyName>
        <cbc:Name>Jana Nováková</cbc:Name>
      </cac:PartyName>
      <cac:PostalAddress>
        <cbc:StreetName>Korunní 2569/108</cbc:StreetName>
        <cbc:CityName>Praha 10</cbc:CityName>
        <cbc:PostalZone>10100</cbc:PostalZone>
        <cac:Country>
          <cbc:IdentificationCode>CZ</cbc:IdentificationCode>
        </cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme>
        <cbc:CompanyID>CZ92588034</cbc:CompanyID>
        <cac:TaxScheme>
          <cbc:ID>VAT</cbc:ID>
        </cac:TaxScheme>
      </cac:PartyTaxScheme>
      <cac:PartyLegalEntity>
        <cbc:RegistrationName>Jana Nováková</cbc:RegistrationName>
        <cbc:CompanyID>92588034</cbc:CompanyID>
      </cac:PartyLegalEntity>
      <cac:Contact>
        <cbc:ElectronicMail>jana@example.cz</cbc:ElectronicMail>
      </cac:Contact>
    </cac:Party>
  </cac:AccountingSupplierParty>
  <cac:AccountingCustomerParty>
    <cac:Party>
      <cbc:EndpointID schemeID="9929">CZ91341272</cbc:EndpointID>
      <cac:PartyName>
        <cbc:Name>Studio Brno s.r.o.</cbc:Name>
      </cac:PartyName>
      <cac:PostalAddress>
        <cbc:StreetName>Masarykova 12</cbc:StreetName>
        <cbc:CityName>Brno</cbc:CityName>
        <cbc:PostalZone>60200</cbc:PostalZone>
        <cac:Country>
          <cbc:IdentificationCode>CZ</cbc:IdentificationCode>
        </cac:Country>
      </cac:PostalAddress>
      <cac:PartyTaxScheme>
        <cbc:CompanyID>CZ91341272</cbc:CompanyID>
        <cac:TaxScheme>
          <cbc:ID>VAT</cbc:ID>
        </cac:TaxScheme>
      </cac:PartyTaxScheme>
      <cac:PartyLegalEntity>
        <cbc:RegistrationName>Studio Brno s.r.o.</cbc:RegistrationName>
        <cbc:CompanyID>91341272</cbc:CompanyID>
      </cac:PartyLegalEntity>
    </cac:Party>
  </cac:AccountingCustomerParty>
  <cac:TaxTotal>
    <cbc:TaxAmount currencyID="CZK">2520.00</cbc:TaxAmount>
    <cac:TaxSubtotal>
      <cbc:TaxableAmount currencyID="CZK">12000.00</cbc:TaxableAmount>
      <cbc:TaxAmount currencyID="CZK">2520.00</cbc:TaxAmount>
      <cac:TaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>21</cbc:Percent>
        <cac:TaxScheme>
          <cbc:ID>VAT</cbc:ID>
        </cac:TaxScheme>
      </cac:TaxCategory>
    </cac:TaxSubtotal>
  </cac:TaxTotal>
  <cac:LegalMonetaryTotal>
    <cbc:LineExtensionAmount currencyID="CZK">12000.00</cbc:LineExtensionAmount>
    <cbc:TaxExclusiveAmount currencyID="CZK">12000.00</cbc:TaxExclusiveAmount>
    <cbc:TaxInclusiveAmount currencyID="CZK">14520.00</cbc:TaxInclusiveAmount>
    <cbc:PayableAmount currencyID="CZK">14520.00</cbc:PayableAmount>
  </cac:LegalMonetaryTotal>
  <cac:CreditNoteLine>
    <cbc:ID>1</cbc:ID>
    <cbc:CreditedQuantity unitCode="H87">1</cbc:CreditedQuantity>
    <cbc:LineExtensionAmount currencyID="CZK">12000.00</cbc:LineExtensionAmount>
    <cac:Item>
      <cbc:Name>Workshop</cbc:Name>
      <cac:ClassifiedTaxCategory>
        <cbc:ID>S</cbc:ID>
        <cbc:Percent>21</cbc:Percent>
        <cac:TaxScheme>
          <cbc:ID>VAT</cbc:ID>
        </cac:TaxScheme>
      </cac:ClassifiedTaxCategory>
    </cac:Item>
    <cac:Price>
      <cbc:PriceAmount currencyID="CZK">12000.00</cbc:PriceAmount>
    </cac:Price>
  </cac:CreditNoteLine>
</CreditNote>
